# Edge-AI-Voice-Assistant

./: .gitignore  README.md
bridge/: .env.example  api.py  app.py  board_demo.py  board_link.py  bridge.py  config.example.json  db.py  desktop_app.py  llm.py  protocol.py  requirements.txt  stt.py  tts.py
bridge/tests/: test_protocol.py
db/: docker-compose.yml  schema.sql
firmware/: CMakeLists.txt  YAHAL_import.cmake
firmware/esp8266/groq_bridge/: config.example.h  groq_bridge.ino
firmware/face_demo/: CMakeLists.txt
firmware/src/: face.cpp  face.h  face_demo.cpp  leds.cpp  leds.h  main.cpp  menu.cpp  menu.h  protocol.h
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  recorder.ts  speech.ts  types.ts
frontend/src/components/: ChatMessage.tsx  Composer.tsx  ControlPanel.tsx  DeviceTwin.tsx  MoodDot.tsx  Sidebar.tsx
